// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifExpertApp debe mostrar correctamente el componente 1`] = `
<Fragment>
  <h2
    className="nes-text"
  >
    Busca tus Gifs favoritos
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <ul />
</Fragment>
`;

exports[`Pruebas en GifExpertApp debe mostrat la lista de categorias 1`] = `
<Fragment>
  <h2
    className="nes-text"
  >
    Busca tus Gifs favoritos
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <ul>
    <GifGrid
      category="Kobe"
      key="Kobe"
    />
    <GifGrid
      category="Jordan"
      key="Jordan"
    />
    <GifGrid
      category="Lebron"
      key="Lebron"
    />
  </ul>
</Fragment>
`;
